--- a/Newell-A2.ipynb
+++ b/Newell-A2.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,12 +211,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def printPath_8p(startState, goalState, path):\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maze Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actionsF_maze(state):\n",
+    "    i = state.index(\"O\")\n",
+    "    if i % 10 > 0 and state[i-1] != \"x\":\n",
+    "        yield \"left\"\n",
+    "    if i % 10 < 9 and state[i+1] != \"x\":\n",
+    "        yield \"right\"\n",
+    "    if i // 10 > 0 and state[i-10] != \"x\":\n",
+    "        yield \"up\"\n",
+    "    if i // 10 < 9 and state[i+10] != \"x\":\n",
+    "        yield \"down\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def takeActionF_maze(state, action):\n",
+    "    #this does not check if action is allowed\n",
+    "    state = state.copy()\n",
+    "    i = state.index(\"O\")\n",
+    "    if action == \"right\":\n",
+    "        state[i], state[i+1] = state[i+1], state[i]\n",
+    "    elif action == \"left\":\n",
+    "        state[i], state[i-1] = state[i-1], state[i]\n",
+    "    elif action == \"up\":\n",
+    "        state[i], state[i-10] = state[i-10], state[i]\n",
+    "    elif action == \"down\":\n",
+    "        state[i], state[i+10] = state[i+10], state[i]\n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printMaze_10(state):\n",
+    "    for i in range(0,10):\n",
+    "        print(*state[i*10:(i+1)*10], sep = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def regenerateMaze(state):\n",
+    "    state = [random.sample(['x','-','-'],1)[0] for _ in range(0,100)] \n",
+    "    return state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printMazePath(result):\n",
+    "    path = result[0].copy()\n",
+    "    for i in result:\n",
+    "        path[i.index(\"O\")] = \"~\"\n",
+    "    printMaze_10(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing 8p"
    ]
   },
   {
@@ -768,6 +857,282 @@
    "outputs": [],
    "source": [
     "printPath_8p(startState, goalState, path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing the maze"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we have our start and end mazes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O x - - - x - x x -\n",
+      "- - - - x - - - x -\n",
+      "x x x - - - x x - x\n",
+      "x x - - - - - - x x\n",
+      "x - x x x - x - x -\n",
+      "- x - x x - - - - x\n",
+      "- - - x - - - - - x\n",
+      "x - x x - - - x - -\n",
+      "x - x - - x x - - x\n",
+      "x x - x x - - x - -\n",
+      "The Goal: \n",
+      "- x - - - x - x x -\n",
+      "- - - - x - - - x -\n",
+      "x x x - - - x x - x\n",
+      "x x - - - - - - x x\n",
+      "x - x x x - x - x -\n",
+      "- x - x x - - - - x\n",
+      "- - - x - - - - - x\n",
+      "x - x x - - - x - -\n",
+      "x - x - - x x - - x\n",
+      "x x - x x - - x - O\n"
+     ]
+    }
+   ],
+   "source": [
+    "startState = ['O', 'x', '-', '-', '-', 'x', '-', 'x', 'x','-',\n",
+    " '-', '-', '-', '-', 'x', '-', '-',\n",
+    " '-', 'x', '-', 'x', 'x', 'x', '-', '-',\n",
+    " '-', 'x', 'x', '-', 'x', 'x', 'x', '-',\n",
+    " '-', '-', '-', '-', '-', 'x', 'x', 'x',\n",
+    " '-', 'x', 'x', 'x', '-', 'x',\n",
+    " '-', 'x', '-', '-', 'x', '-', 'x', 'x',\n",
+    " '-', '-', '-', '-', 'x', '-', '-', '-',\n",
+    " 'x', '-', '-', '-', '-', '-', 'x', 'x',\n",
+    " '-', 'x', 'x', '-', '-', '-', 'x', '-',\n",
+    " '-', 'x', '-', 'x', '-', '-', 'x', 'x',\n",
+    " '-', '-', 'x', 'x', 'x', '-', 'x', 'x',\n",
+    " '-', '-', 'x', '-', '-']\n",
+    "printMaze_10(startState)\n",
+    "goalState = startState.copy()\n",
+    "goalState[0] = \"-\"\n",
+    "goalState[99] = \"O\"\n",
+    "print(\"The Goal: \")\n",
+    "printMaze_10(goalState)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some verification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['down']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(actionsF_maze(startState))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- x - - - x - x x -\n",
+      "O - - - x - - - x -\n",
+      "x x x - - - x x - x\n",
+      "x x - - - - - - x x\n",
+      "x - x x x - x - x -\n",
+      "- x - x x - - - - x\n",
+      "- - - x - - - - - x\n",
+      "x - x x - - - x - -\n",
+      "x - x - - x x - - x\n",
+      "x x - x x - - x - -\n"
+     ]
+    }
+   ],
+   "source": [
+    "downone = takeActionF_maze(startState,\"down\")\n",
+    "printMaze_10(downone)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['right', 'up']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(actionsF_maze(downone))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = iterativeDeepeningSearch(startState, goalState, actionsF_maze, takeActionF_maze, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~ x - - - x - x x -\n",
+      "~ ~ ~ ~ x - - - x -\n",
+      "x x x ~ ~ ~ x x - x\n",
+      "x x - - - ~ ~ ~ x x\n",
+      "x - x x x - x ~ x -\n",
+      "- x - x x - - ~ ~ x\n",
+      "- - - x - - - - ~ x\n",
+      "x - x x - - - x ~ -\n",
+      "x - x - - x x - ~ x\n",
+      "x x - x x - - x ~ ~\n"
+     ]
+    }
+   ],
+   "source": [
+    "printMazePath(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- - - - x - x - x x\n",
+      "- - - - - x - - - -\n",
+      "- - - - - - - - - -\n",
+      "- - - x - - - - - -\n",
+      "- - - - - x - - - x\n",
+      "- - x - - x x - - x\n",
+      "x x - - - - - - - -\n",
+      "x - - - x - x x - -\n",
+      "x x - - - - x x x -\n",
+      "x - - x x - x - - -\n"
+     ]
+    }
+   ],
+   "source": [
+    "startState = regenerateMaze(startState)\n",
+    "printMaze_10(startState)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- - - - x - x - x x\n",
+      "- - - - - x - - - -\n",
+      "- - - - - - - - - -\n",
+      "- - - x - - - - - -\n",
+      "- - - - - x - - - x\n",
+      "- - x - - x x - - x\n",
+      "x x - - - - - - - -\n",
+      "x - - - x - x x - -\n",
+      "x x - - - - x x x -\n",
+      "x - O x x - x - - -\n",
+      "goal: \n",
+      "- - - - x - x - x x\n",
+      "- - - - - x - - - -\n",
+      "- - - - - - - - - -\n",
+      "- - - x - - - - - -\n",
+      "- - - - - x - - - x\n",
+      "- - x - - x x - - x\n",
+      "x x - - - - - - - -\n",
+      "x - - - x - x x - -\n",
+      "x x - - - - x x x -\n",
+      "x - - x x - x O - -\n"
+     ]
+    }
+   ],
+   "source": [
+    "startState[92] = \"-\"\n",
+    "goalState = startState.copy()\n",
+    "startState[92] = \"O\"\n",
+    "printMaze_10(startState)\n",
+    "goalState[97] = \"O\"\n",
+    "print(\"goal: \")\n",
+    "printMaze_10(goalState)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- - - - x - x - x x\n",
+      "- - - - - x - - - -\n",
+      "- - - - - - - - - -\n",
+      "- - - x - - - - - -\n",
+      "- - - - - x - - - x\n",
+      "- - x - - x x - - x\n",
+      "x x - - - ~ ~ ~ ~ ~\n",
+      "x - - - x ~ x x - ~\n",
+      "x x ~ ~ ~ ~ x x x ~\n",
+      "x - ~ x x - x ~ ~ ~\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = iterativeDeepeningSearch(startState, goalState, actionsF_maze, takeActionF_maze, 20)\n",
+    "if result != \"cutoff\" and result != \"failure\":\n",
+    "    printMazePath(result)"
    ]
   },
   {
