--- a/Newell-A3.ipynb
+++ b/Newell-A3.ipynb
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,15 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def aStarSearch(startState, actionsF, takeActionF, goalTestF, hF, countNodes = False):\n",
     "    h = hF(startState)\n",
     "    startNode = Node(state=startState, f=0+h, g=0, h=h)\n",
-    "    node_count = 1 if countNodes else 0\n",
-    "    return aStarSearchHelper(startNode, actionsF, takeActionF, goalTestF, hF, float('inf'), node_count)"
+    "    node_count = [0] \n",
+    "    if countNodes: \n",
+    "        return aStarSearchHelper(startNode, actionsF, takeActionF, goalTestF, hF, float('inf'), \n",
+    "                                 node_count), node_count[0]\n",
+    "    else:\n",
+    "        return aStarSearchHelper(startNode, actionsF, takeActionF, goalTestF, hF, float('inf'), node_count)"
    ]
   },
   {
@@ -169,11 +173,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aStarSearchHelper(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count = 0):\n",
+    "def aStarSearchHelper(parentNode, actionsF, takeActionF, goalTestF, hF, fmax, node_count):\n",
     "    if goalTestF(parentNode.state):\n",
     "        return ([parentNode.state], parentNode.g)\n",
     "    ## Construct list of children nodes with f, g, and h values\n",
@@ -181,13 +185,13 @@
     "    if not actions:\n",
     "        return (\"failure\", float('inf'))\n",
     "    children = []\n",
-    "    for action in actions:\n",
-    "        (childState,stepCost) = takeActionF(parentNode.state, action)\n",
+    "    for action, stepCost in actions:\n",
+    "        childState = takeActionF(parentNode.state, action)\n",
     "        h = hF(childState)\n",
     "        g = parentNode.g + stepCost\n",
     "        f = max(h+g, parentNode.f)\n",
     "        childNode = Node(state=childState, f=f, g=g, h=h)\n",
-    "        if node_count: node_count += 1\n",
+    "        if node_count: node_count[0] += 1\n",
     "        children.append(childNode)\n",
     "    while True:\n",
     "        # find best child\n",
@@ -203,7 +207,6 @@
     "        if result is not \"failure\":               \n",
     "            result.insert(0,parentNode.state)\n",
     "            retlist = [result, bestChild.f]\n",
-    "            if node_count: retlist.append(node_count)\n",
     "            return tuple(retlist)        "
    ]
   },
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,12 +336,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas\n",
     "def runExperiment(goalState1, goalState2, goalState3, hueristicList):\n",
+    "    startState = [1, 2, 3, 4, 0, 5, 6, 7, 8]\n",
+    "    print(\"\\t\" + str(goalState1) + \"   \"\n",
+    "         + str(goalState2) + \"   \"\n",
+    "         + str(goalState3))\n",
+    "    \n",
+    "    \n",
     "    return \"nothing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t[1, 2, 3, 4, 0, 5, 6, 7, 8]   [1, 2, 3, 4, 5, 8, 6, 0, 7]   [1, 0, 3, 4, 5, 8, 2, 6, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'nothing'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g1 = [1,2,3,4,0,5,6,7,8]\n",
+    "g2 = [1,2,3,4,5,8,6,0,7]\n",
+    "g3 = [1,0,3,4,5,8,2,6,7]\n",
+    "\n",
+    "runExperiment(g1,g2,g3,[\"blank\"])"
    ]
   },
   {
@@ -358,19 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def depthLimitedSearch(state, goalState, actionsF, takeActionF, depthLimit):\n",
+    "def depthLimitedSearch(state, goalState, actionsF, takeActionF, depthLimit, node_count):\n",
     "    if state == goalState:\n",
     "        return []\n",
     "    if depthLimit == 0:\n",
     "        return \"cutoff\"\n",
     "    cutoffoccurred = False\n",
-    "    for action in actionsF(state):\n",
-    "        childState,cost = takeActionF(state, action) # This was modified to deal with the new cost.\n",
-    "        result = depthLimitedSearch(childState, goalState, actionsF, takeActionF, depthLimit - 1)\n",
+    "    for action, _ in actionsF(state):           # NEWER, this was actually the modified line\n",
+    "        childState = takeActionF(state, action) # This was modified to deal with the new cost.\n",
+    "        node_count[0] += 1\n",
+    "        result = depthLimitedSearch(childState, goalState, actionsF, takeActionF, depthLimit - 1, node_count)\n",
     "        if result == \"cutoff\":\n",
     "            cutoffoccurred = True\n",
     "        elif result != \"failure\":\n",
@@ -384,19 +426,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "def iterativeDeepeningSearch(startState, goalState, actionsF, takeActionF, maxDepth, countNodes = False):\n",
-    "    node_count = 0\n",
+    "    node_count = [0]\n",
     "    for depth in range(0, maxDepth):\n",
-    "        result = depthLimitedSearch(startState, goalState, actionsF, takeActionF, depth)\n",
+    "        result = depthLimitedSearch(startState, goalState, actionsF, takeActionF, depth, node_count)\n",
     "        if result == \"failure\":\n",
     "            return \"failure\"\n",
     "        if result != \"cutoff\":\n",
     "            result.insert(0, startState)\n",
-    "            return result\n",
+    "            if countNodes:\n",
+    "                return result, node_count[0]\n",
+    "            else: \n",
+    "                return result\n",
     "    return \"cutoff\""
    ]
   },
@@ -409,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,19 +462,19 @@
     "    i = state.index(0)\n",
     "    actions = []\n",
     "    if i % 3 > 0:\n",
-    "        actions.append(\"left\",1)\n",
+    "        actions.append((\"left\",1))\n",
     "    if i % 3 < 2:\n",
-    "        actions.append(\"right\",1)\n",
+    "        actions.append((\"right\",1))\n",
     "    if i // 3 > 0:\n",
-    "        actions.append(\"up\",1)\n",
+    "        actions.append((\"up\",1))\n",
     "    if i // 3 < 2:\n",
-    "        actions.append(\"down\",1)\n",
+    "        actions.append((\"down\",1))\n",
     "    return actions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -559,12 +604,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Effective Branching Factor Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First, some example output for the ebf function.  During execution, this example shows debugging output which is the low and high values passed into a recursive helper function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -575,7 +627,7 @@
        "1.661376953125"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +654,7 @@
        "1.0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +674,7 @@
        "1.0078125"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +694,7 @@
        "1.0000009536743164"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +714,7 @@
        "11.275596931956898"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +734,7 @@
        "1.2348192492705223"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,12 +747,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Testing Node Counting\n",
+    "This is used to find the count of nodes in an experiment. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "4\n",
+      "Tests of counting funcitonality passed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "startState = [1,2,3,4,0,5,6,7,8]\n",
+    "goalState = [1,2,3,4,5,8,6,0,7]\n",
+    "a, nodeCount = aStarSearch(startState, actionsF_8p, takeActionF_8p, \n",
+    "                                 lambda s: goalTestF_8p(s, goalState),\n",
+    "                                 lambda s: h1_8p(s, goalState), True)\n",
+    "print(len(a))\n",
+    "assert(nodeCount == 116)\n",
+    "_, nodeCount = aStarSearch(startState, actionsF_8p, takeActionF_8p, \n",
+    "                                 lambda s: goalTestF_8p(s, goalState),\n",
+    "                                 lambda s: h2_8p(s, goalState), True)\n",
+    "print(len(_))\n",
+    "assert(nodeCount == 51)\n",
+    "_, nodeCount = iterativeDeepeningSearch(startState, goalState, actionsF_8p, takeActionF_8p, 10, True)\n",
+    "assert(nodeCount == 43)\n",
+    "print(len(_))\n",
+    "print(\"Tests of counting funcitonality passed!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Given Trial Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here is a simple example using our usual simple graph search."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +831,7 @@
        "[('b', 1), ('c', 1)]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +852,7 @@
        "('b', 1)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +872,7 @@
        "True"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +892,7 @@
        "1"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +912,7 @@
        "['a', 'c', 'h', 'i', 'k', 'z']"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +932,7 @@
        "(['a', 'c', 'h', 'i', 'k', 'z'], 5)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
